tests/baselines/reference/superWithTypeArgument.errors.txt
tests/cases/compiler/superWithTypeArgument.ts(7,14): error TS2754: 'super' may not use type arguments.
tests/cases/compiler/superWithTypeArgument.ts(7,15): error TS2558: Expected 0 type arguments, but got 1.


==== tests/cases/compiler/superWithTypeArgument.ts (2 errors) ====
    class C {
        
    }
    
    class D<T> extends C {
        constructor() {
            super<T>();
                 ~~~
!!! error TS2754: 'super' may not use type arguments.
                  ~
!!! error TS2558: Expected 0 type arguments, but got 1.
        }
    }